Fix missing margin between cardset info and cards

--- a/imports/ui/cardset/cardset.scss
+++ b/imports/ui/cardset/cardset.scss
@@ -266,6 +266,10 @@ $font_5: sans-serif;
     margin-right: 10px;
     padding: 0;
   }
+
+}
+
+#cardsetInfoDetail {
   margin-bottom: 20px;
 }
 
